# flake8-dunder-all

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __pkginfo__.py  demo.py  formate.toml  lint_roller.sh  make_conda_recipe.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.ci/: actions_deploy_conda.sh  travis_deploy_conda.sh
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  conf.py  contributing.rst  docs.rst  index.rst  license.rst  plugin.rst  requirements.txt  script.rst  usage.rst
doc-source/_templates/sidebar/: navigation.html
flake8_dunder_all/: __init__.py  __main__.py  utils.py
tests/: common.py  conftest.py  requirements.txt  test_dir_required.py  test_flake8_dunder_all.py  test_main.py  test_subprocess.py  test_utils.py
tests/test_flake8_dunder_all_/: test_check_and_add_all_async_function_no___all___._py_  test_check_and_add_all_class_no___all___._py_  test_check_and_add_all_from_import_._py_  test_check_and_add_all_function_and_class_no___all___._py_  test_check_and_add_all_function_and_class_with___all___._py_  test_check_and_add_all_function_and_class_with___all___and_extra_variable_._py_  test_check_and_add_all_function_no___all___._py_  test_check_and_add_all_if_False_._py_  test_check_and_add_all_if_TYPE_CHECKING_._py_  test_check_and_add_all_if_TYPE_CHECKING_else_._py_  test_check_and_add_all_if_TYPE_CHECKING_try_._py_  test_check_and_add_all_if_TYPE_CHECKING_try_finally_._py_  test_check_and_add_all_import_and_docstring_._py_  test_check_and_add_all_lots_of_lines_._py_  test_check_and_add_all_not_TYPE_CHECKING_if_._py_  test_check_and_add_all_overload_._py_  test_check_and_add_all_tuples_async_function_no___all___._py_  test_check_and_add_all_tuples_class_no___all___._py_  test_check_and_add_all_tuples_function_and_class_no___all___._py_  test_check_and_add_all_tuples_function_and_class_with___all___._py_  test_check_and_add_all_tuples_function_and_class_with___all___and_extra_variable_._py_  test_check_and_add_all_tuples_function_no___all___._py_  test_check_and_add_all_tuples_if_False_._py_  test_check_and_add_all_tuples_if_TYPE_CHECKING_._py_  test_check_and_add_all_tuples_just_a_docstring_._py_  test_check_and_add_all_tuples_lots_of_lines_._py_  test_check_and_add_all_tuples_typing_overload_._py_
tests/test_main_/: test_main_help.txt
