[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "flake8-dunder-all"
version = "0.1.7"
description = "A Flake8 plugin and pre-commit hook which checks to ensure modules have defined '__all__'."
readme = "README.rst"
keywords = [ "flake8",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/flake8-dunder-all"
"Issue Tracker" = "https://github.com/domdfcoding/flake8-dunder-all/issues"
"Source Code" = "https://github.com/domdfcoding/flake8-dunder-all"
Documentation = "https://flake8-dunder-all.readthedocs.io/en/latest"

[project.scripts]
ensure_dunder_all = "flake8_dunder_all.__main__:main"
ensure-dunder-all = "flake8_dunder_all.__main__:main"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "flake8_dunder_all"

[project.entry-points."flake8.extension"]
DALL = "flake8_dunder_all:Plugin"
