# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
[metadata]
name = flake8-dunder-all
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = MIT License
keywords =
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Windows, macOS, Linux
url = https://github.com/domdfcoding/flake8-dunder-all
project_urls =
    Documentation = https://flake8-dunder-all.readthedocs.io
    Issue_Tracker = https://github.com/domdfcoding/flake8-dunder-all/issues
    Source_Code = https://github.com/domdfcoding/flake8-dunder-all
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*
    doc-source

[mypy]
python_version = 3.6
ignore_missing_imports = True
namespace_packages = True
check_untyped_defs = True

[options.entry_points]
flake8.extension =
    DUNDER_ALL=flake8_dunder_all:Plugin
console_scripts =
    ensure_dunder_all=flake_dunder_all.__main__:main
    ensure-dunder-all=flake_dunder_all.__main__:main
