# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[options.entry_points]
console_scripts =
    ensure_dunder_all=flake8_dunder_all.__main__:main
    ensure-dunder-all=flake8_dunder_all.__main__:main
flake8.extension = DALL=flake8_dunder_all:Plugin
